Web Inspector: use new JS builtin methods instead of custom utility functions https://bugs.webkit.org/show_bug.cgi?id=290149
Reviewed by Yusuke Suzuki.

These custom utility functions are no longer needed now that there's builtin JS methods for this same functionality.
- `{...object}` instead of `Object.shallowCopy`
- `Promise.withResolvers` instead of `WI.WrappedPromise`
- `Set.prototype.isDisjointFrom` instead of `Set.prototype.intersects`
- `Set.prototype.isSubsetOf`
- `Set.prototype.difference`

* Source/WebInspectorUI/UserInterface/Base/Utilities.js:
(Object.shallowCopy): Deleted.
(Set.prototype.isDisjointFrom): Deleted.
(Set.prototype.isSubsetOf): Deleted.
(Set.prototype.difference): Deleted.
* Source/WebInspectorUI/UserInterface/Models/WrappedPromise.js: Removed.

* Source/WebInspectorUI/UserInterface/Base/FileUtilities.js:
(WI.FileUtilities.async save):
* Source/WebInspectorUI/UserInterface/Base/Main.js:
(WI.loaded):
* Source/WebInspectorUI/UserInterface/Protocol/LoggingProtocolTracer.js:
(WI.LoggingProtocolTracer.prototype.logDidHandleResponse):
(WI.LoggingProtocolTracer.prototype.logDidHandleEvent):
* Source/WebInspectorUI/UserInterface/Protocol/RemoteObject.js:
(WI.RemoteObject.prototype.async findFunctionSourceCodeLocation):
(WI.RemoteObject.prototype.findFunctionSourceCodeLocation): Deleted.
* Source/WebInspectorUI/UserInterface/Models/BackForwardEntry.js:
(WI.BackForwardEntry.prototype.get cookie):
* Source/WebInspectorUI/UserInterface/Models/DOMNode.js:
(WI.DOMNode.prototype._handleDOMNodeDidFireEvent):
* Source/WebInspectorUI/UserInterface/Models/DOMNodeStyles.js:
(WI.DOMNodeStyles.prototype.refresh):
* Source/WebInspectorUI/UserInterface/Models/Resource.js:
(WI.Resource.prototype.async createLocalResourceOverride):
* Source/WebInspectorUI/UserInterface/Controllers/CodeMirrorCompletionController.js:
(WI.CodeMirrorCompletionController):
(WI.CodeMirrorCompletionController.prototype.completeAtCurrentPositionIfNeeded):
(WI.CodeMirrorCompletionController.

--- a/LayoutTests/inspector/canvas/recording-html-2d.html
+++ b/LayoutTests/inspector/canvas/recording-html-2d.html
@@ -124,26 +124,26 @@ function test() {
         test(resolve, reject) {
             startRecording(WI.Canvas.ContextType.Canvas2D, resolve, reject, {
                 callback(recording) {
-                    let promise = new WI.WrappedPromise;
+                    let promise = new Promise((resolve, reject) => {
+                        let listener = recording.addEventListener(WI.Recording.Event.ProcessedAction, (event) => {
+                            if (!recording.ready)
+                                return;
 
-                    let listener = recording.addEventListener(WI.Recording.Event.ProcessedAction, (event) => {
-                        if (!recording.ready)
-                            return;
+                            let html = recording.toHTML();
+                            html = html.replace(/"data:image\/png;base64,[^"]+"/g, "<filtered>");
 
-                        let html = recording.toHTML();
-                        html = html.replace(/"data:image\/png;base64,[^"]+"/g, "<filtered>");
+                            InspectorTest.log("++++++++++ HTML ++++++++++");
+                            InspectorTest.log(html);
+                            InspectorTest.log("++++++++++ HTML ++++++++++");
 
-                        InspectorTest.log("++++++++++ HTML ++++++++++");
-                        InspectorTest.log(html);
-                        InspectorTest.log("++++++++++ HTML ++++++++++");
-
-                        recording.removeEventListener(WI.Recording.Event.ProcessedAction, listener);
-                        promise.resolve();
+                            recording.removeEventListener(WI.Recording.Event.ProcessedAction, listener);
+                            resolve();
+                        });
                     });
 
                     recording.startProcessing();
 
-                    return promise.promise;
+                    return promise;
                 },
             });
         },
