--- a/LayoutTests/inspector/debugger/breakpoint-action-log.html
+++ b/LayoutTests/inspector/debugger/breakpoint-action-log.html
@@ -16,46 +16,43 @@ function test()
     suite.addTestCase({
         name: "TemplateLiteralPlaceholders",
         description: "Evaluate breakpoint with logging actions that include placeholders.",
-        test(resolve, reject) {
-            let breakpointPromise = new WI.WrappedPromise;
-            WI.debuggerManager.addEventListener(WI.DebuggerManager.Event.ScriptAdded, (event) => {
-                let scriptObject = event.data.script;
-                if (!/script\-for\-breakpoint\-actions\.js$/.test(scriptObject.url))
-                    return;
+        async test() {
+            let breakpointPromise = new Promise((resolve, reject) => {
+                WI.debuggerManager.addEventListener(WI.DebuggerManager.Event.ScriptAdded, (event) => {
+                    let scriptObject = event.data.script;
+                    if (!/script\-for\-breakpoint\-actions\.js$/.test(scriptObject.url))
+                        return;
 
-                let location = scriptObject.createSourceCodeLocation(4, 0);
-                let breakpoint = new WI.JavaScriptBreakpoint(location);
-                breakpoint.autoContinue = true;
+                    let location = scriptObject.createSourceCodeLocation(4, 0);
+                    let breakpoint = new WI.JavaScriptBreakpoint(location);
+                    breakpoint.autoContinue = true;
 
-                function addLogAction(data) {
-                    breakpoint.addAction(new WI.BreakpointAction(WI.BreakpointAction.Type.Log, {data}));
-                }
+                    function addLogAction(data) {
+                        breakpoint.addAction(new WI.BreakpointAction(WI.BreakpointAction.Type.Log, {data}));
+                    }
 
-                addLogAction("`${a}`");
-                addLogAction("'${a}'");
-                addLogAction("${'ab' + 'c'}");
-                addLogAction("${\"{abc}\"}");
-                addLogAction("${'{abc}'}");
-                addLogAction("${`{abc}`}");
-                addLogAction("${`ab${'c'}`}");
-                addLogAction("${({a: 137}).a}");
-                addLogAction("close curly brace in RegExp: ${/\\}/.test('}')}");
-                addLogAction("${a} and ${JSON.stringify(b)}");
+                    addLogAction("`${a}`");
+                    addLogAction("'${a}'");
+                    addLogAction("${'ab' + 'c'}");
+                    addLogAction("${\"{abc}\"}");
+                    addLogAction("${'{abc}'}");
+                    addLogAction("${`{abc}`}");
+                    addLogAction("${`ab${'c'}`}");
+                    addLogAction("${({a: 137}).a}");
+                    addLogAction("close curly brace in RegExp: ${/\\}/.test('}')}");
+                    addLogAction("${a} and ${JSON.stringify(b)}");
 
-                WI.debuggerManager.addBreakpoint(breakpoint);
-                breakpointPromise.resolve();
+                    WI.debuggerManager.addBreakpoint(breakpoint);
+                    resolve();
+                });
             });
 
             let reloadPromise = InspectorTest.awaitEvent(FrontendTestHarness.Event.TestPageDidLoad);
+
             InspectorTest.reloadPage();
-            Promise.all([
-                reloadPromise,
-                breakpointPromise.promise
-            ])
-            .then(() => {
-                return InspectorTest.evaluateInPage("runBreakpointActions()");
-            })
-            .then(resolve);;
+
+            await Promise.all([reloadPromise, breakpointPromise]);
+            await InspectorTest.evaluateInPage("runBreakpointActions()");
         }
     });
 
