--- a/LayoutTests/inspector/debugger/probe-manager-add-remove-actions.html
+++ b/LayoutTests/inspector/debugger/probe-manager-add-remove-actions.html
@@ -7,55 +7,53 @@
 <script>
 function test()
 {
-    let breakpointPromise = new WI.WrappedPromise;
-    WI.Frame.addEventListener(WI.Frame.Event.MainResourceDidChange, function() {
-        InspectorTest.startTracingBreakpoints();
-        InspectorTest.startTracingProbes();
+    let breakpointPromise = new Promise((resolve, reject) => {
+        WI.Frame.addEventListener(WI.Frame.Event.MainResourceDidChange, function() {
+            InspectorTest.startTracingBreakpoints();
+            InspectorTest.startTracingProbes();
 
-        var currentTicks = 0;
-        const expectedTicks = 2;
+            var currentTicks = 0;
+            const expectedTicks = 2;
 
-        function incrementTick(event)
-        {
-            InspectorTest.log("Hit test checkpoint event #" + currentTicks + " with type: " + event.type);
-            if (++currentTicks === expectedTicks)
-                InspectorTest.completeTest();
-        }
+            function incrementTick(event)
+            {
+                InspectorTest.log("Hit test checkpoint event #" + currentTicks + " with type: " + event.type);
+                if (++currentTicks === expectedTicks)
+                    InspectorTest.completeTest();
+            }
 
-        WI.Probe.addEventListener(WI.Probe.Event.SampleAdded, incrementTick);
+            WI.Probe.addEventListener(WI.Probe.Event.SampleAdded, incrementTick);
 
-        WI.debuggerManager.addEventListener(WI.DebuggerManager.Event.ScriptAdded, function(event) {
+            WI.debuggerManager.addEventListener(WI.DebuggerManager.Event.ScriptAdded, function(event) {
 
-            var scriptObject = event.data.script;
+                var scriptObject = event.data.script;
 
-            if (!/script\-for\-breakpoint\-actions\.js$/.test(scriptObject.url))
-                return;
+                if (!/script\-for\-breakpoint\-actions\.js$/.test(scriptObject.url))
+                    return;
 
-            var location = scriptObject.createSourceCodeLocation(4, 0);
-            // Create the breakpoint and its actions before sending anything to the backend.
-            var breakpoint = new WI.JavaScriptBreakpoint(location);
-            breakpoint.autoContinue = true;
-            for (var i of [0, 1])
-                breakpoint.addAction(new WI.BreakpointAction(WI.BreakpointAction.Type.Probe, {data: "a"}));
+                var location = scriptObject.createSourceCodeLocation(4, 0);
+                // Create the breakpoint and its actions before sending anything to the backend.
+                var breakpoint = new WI.JavaScriptBreakpoint(location);
+                breakpoint.autoContinue = true;
+                for (var i of [0, 1])
+                    breakpoint.addAction(new WI.BreakpointAction(WI.BreakpointAction.Type.Probe, {data: "a"}));
 
-            WI.debuggerManager.addBreakpoint(breakpoint);
+                WI.debuggerManager.addBreakpoint(breakpoint);
 
-            breakpoint.addEventListener(WI.JavaScriptBreakpoint.Event.ResolvedStateDidChange, function() {
-                InspectorTest.expectThat(breakpoint.resolved, "Breakpoint should be resolved.");
-            });
+                breakpoint.addEventListener(WI.JavaScriptBreakpoint.Event.ResolvedStateDidChange, function() {
+                    InspectorTest.expectThat(breakpoint.resolved, "Breakpoint should be resolved.");
+                });
 
-
-            breakpointPromise.resolve();
-          });
+                resolve();
+              });
+        });
     });
 
     let reloadPromise = InspectorTest.awaitEvent(FrontendTestHarness.Event.TestPageDidLoad);
+
     InspectorTest.reloadPage();
-    Promise.all([
-        reloadPromise,
-        breakpointPromise.promise
-    ])
-    .then(() => {
+
+    Promise.all([reloadPromise, breakpointPromise]).then(() => {
         InspectorTest.evaluateInPage("breakpointActions(12, {x:1,y:2})");
     });
 }
