--- a/LayoutTests/fast/css/create-columns-onload-crash.html
+++ b/LayoutTests/fast/css/create-columns-onload-crash.html
@@ -1,3 +1,4 @@
+<!-- webkit-test-runner [ dumpJSConsoleLogInStdErr=true ] -->
 <script>
     if (window.testRunner) {
         testRunner.dumpAsText();
