--- a/LayoutTests/fast/workers/worker-script-error.html
+++ b/LayoutTests/fast/workers/worker-script-error.html
@@ -1,3 +1,4 @@
+<!-- webkit-test-runner [ dumpJSConsoleLogInStdErr=true ] -->
 <body>
 <p>Test Worker script error handling functionality. Should print a series of PASS messages, followed with DONE.</p>
 <div id=result></div>
