[Model] Handle the error case when the model asset cannot be loaded https://bugs.webkit.org/show_bug.cgi?id=290244 rdar://147635013
Reviewed by Mike Wyrzykowski.

If the model asset cannot be loaded for some reason (e.g. invalid
format), we should reject the ready promise on the model element.

* LayoutTests/model-element/model-element-ready-expected.txt:
* LayoutTests/model-element/model-element-ready.html:
Check ready promise is rejected when the model source points to an
asset that can't be loaded.
* LayoutTests/model-element/resources/error-case.usdz: Added.
A bad usdz example that doesn't have the expected content.
* Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.mm:
(WebKit::toResourceError):
(WebKit::RKModelLoaderUSD::load):
If no entity is loaded, treat this as a failed case.
(WebKit::ModelProcessModelPlayerProxy::didFailLoading):
Notify the web content side about this failed load.
* Source/WebKit/WebProcess/Model/ModelProcessModelPlayer.cpp:
(WebKit::ModelProcessModelPlayer::didFailLoading):
Notify the client (HTMLModelElement) about the failed load.
* Source/WebKit/WebProcess/Model/ModelProcessModelPlayer.h:
* Source/WebKit/WebProcess/Model/ModelProcessModelPlayer.messages.in:

Canonical link: https://commits.webkit.org/292547@main

--- a/LayoutTests/model-element/model-element-ready.html
+++ b/LayoutTests/model-element/model-element-ready.html
@@ -14,7 +14,15 @@ promise_test(async t => {
         value => assert_unreached("Unexpected ready promise resolution."),
         reason => assert_true(reason.toString().includes("NetworkError"), "The ready promise is rejected with a NetworkError.")
     );
-}, `<model> rejects the ready promise when provided with an unknown resoure.`);
+}, `<model> rejects the ready promise when provided with an unknown resource.`);
+
+promise_test(async t => {
+    const [model, source] = createModelAndSource(t, "resources/error-case.usdz");
+    return model.ready.then(
+        value => assert_unreached("Unexpected ready promise resolution."),
+        reason => assert_true(reason.toString().includes("AbortError"), "The ready promise is rejected with an AbortError.")
+    );
+}, `<model> rejects the ready promise when provided with a resource that can't be loaded.`);
 
 promise_test(async t => {
     const [model, source] = createModelAndSource(t, "resources/heart.usdz");
@@ -25,7 +33,7 @@ promise_test(async t => {
 
     return modelReady.then(
         value => assert_unreached("Unexpected ready promise resolution."),
-        reason => assert_true(reason.toString().includes("AbortError"), "The ready promise is rejected with a NetworkError.")
+        reason => assert_true(reason.toString().includes("AbortError"), "The ready promise is rejected with an AbortError.")
     );
 }, `<model> rejects the ready promise when its resource load is aborted.`);
 
