subtitle tracks with no `srclang` show up as " (label)" instead of just "label" https://bugs.webkit.org/show_bug.cgi?id=290226
Reviewed by Eric Carlson.

* Source/WebCore/page/CaptionUserPreferencesMediaAF.cpp:
(WebCore::trackDisplayName):
Only use the localized format string if both parts are valid.

* Source/WebCore/page/CaptionUserPreferences.cpp:
(WebCore::trackDisplayName):
Strip any leading/trailing whitespace from the `label` before deciding whether to use it.

* LayoutTests/media/modern-media-controls/tracks-support/sorted-by-user-preferred-languages.html:
* LayoutTests/media/modern-media-controls/tracks-support/sorted-by-user-preferred-languages-expected.txt:

Canonical link: https://commits.webkit.org/292577@main

--- a/LayoutTests/media/modern-media-controls/tracks-support/sorted-by-user-preferred-languages.html
+++ b/LayoutTests/media/modern-media-controls/tracks-support/sorted-by-user-preferred-languages.html
@@ -16,7 +16,8 @@
     <track src="../../lorem-ipsum.vtt" kind="subtitles"    srclang="fr" label="label-fr">
     <track src="../../lorem-ipsum.vtt" kind="descriptions" srclang="es" label="Descriptions">
     <track src="../../lorem-ipsum.vtt" kind="captions"     srclang="es">
-    <track src="../../lorem-ipsum.vtt" kind="subtitles"    srclang="es">
+    <track src="../../lorem-ipsum.vtt" kind="subtitles"    srclang="es" label=" ">
+    <track src="../../lorem-ipsum.vtt" kind="subtitles"                 label="no-srclang">
     <track src="../../lorem-ipsum.vtt" kind="subtitles"    srclang="zh-CN">
 </video>
 <script type="text/javascript">
