--- a/LayoutTests/imported/w3c/web-platform-tests/css/cssom/idlharness.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/css/cssom/idlharness.html
@@ -51,11 +51,13 @@ idl_test(
       CSSStyleRule: ['sheet.cssRules[4]'],
       CSSStyleProperties: [
         'sheet.cssRules[4].style', // CSSStyleRule
-        'sheet.cssRules[2].style', // CSSPageRule
         'sheet.cssRules[2].cssRules[0].style', // CSSMarginRule
         'style_element.style', // ElementCSSInlineStyle for HTMLElement
         'svg_element.style', // ElementCSSInlineStyle for SVGElement
         'getComputedStyle(svg_element)'
+      ],
+      CSSPageDescriptors: [
+        'sheet.cssRules[2].style', // CSSPageRule
       ],
       ProcessingInstruction: ['xmlss_pi'],
       Window: ['window'],
