Remove excessive indirection with sending remote glyph drawing commands https://bugs.webkit.org/show_bug.cgi?id=288635 rdar://145681066
Reviewed by Simon Fraser.

DisplayList::Recorder interface would cause overly many virtual function
calls and would prevent backend-specific caching behavior.

Consider callgraph for `context->drawDecomposedGlyphs()`:
Recorder::drawDecomposedGlyphs() <vfunc>
    RemoteDisplayListRecorderProxy::recordResourceUse(font) <vfunc>
    RemoteDisplayListRecorderProxy::recordResourceUse(decomposedGlyphs) <vfunc>
    RemoteDisplayListRecorderProxy::recordDecomposedGlyphs() <vfunc>
        message send...

Instead, fix it in this patch to be:
RemoteDisplayListRecorderProxy::drawDecomposedGlyphs() <vfunc>
    RemoteDisplayListRecorderProxy::recordResourceUse(font) <normal>
    RemoteDisplayListRecorderProxy::recordResourceUse(decomposedGlyphs) <normal>
    message send..

In addition, fixes in-process display lists to not have redundant resource
hash map access for font and decomposed glyphs. Previously, display list
items would store the identifier, and the display list resource cache
hash map would store the identifier -> Ref<Font> and
identifier -> Ref<DecomposedGlyphs>. The hash map lookup is unneeded,
the items should store the ref directly.

In future patches, this allows recordResourceUse calls to record and return
backend command specific data without the need for this data to leak
into the WebCore. For example, current identifiers should not be defined
in WebCore at all, but they are, since recordResourceUse is there and
display list resource cache redundantly uses those.

This is continuation of 284963@main.

Remove the pessimizing PositionedGlyphs struct. It was only used to
serialize a message parameter, it did no payload work. Instead, it
incurred a copy of glyphs and advances, because PositionedGlyphs was
redundantly used in hold sites to hold the vectors.

Move DrawGlyphsRecorder to CoreText. It was only implemented in
CoreText a

--- a/LayoutTests/fast/text/glyph-display-lists/glyph-display-list-shadow-unshared.html
+++ b/LayoutTests/fast/text/glyph-display-lists/glyph-display-list-shadow-unshared.html
@@ -9,7 +9,7 @@ if (window.internals)
 </script>
 <body onload="run()">
 <style>
-#first, #second { text-shdaow: 5px 5px blue; }
+#first, #second { text-shadow: 5px 5px blue; }
 </style>
 <div id=container>
     <span id=first>Some text</span>
