Add test to ensure IDBTransaction state is active after creation in Worker https://bugs.webkit.org/show_bug.cgi?id=290394 rdar://147848186
Reviewed by Per Arne Vollan.

* LayoutTests/storage/indexeddb/resources/transaction-state-active-after-creation.js: Added.
(const.deleteDatabase):
(const.openDatabase):
(const.prepareTransaction.async await):
(const.prepareTransaction):
(const.sleep):
(const.asyncTest.async await):
(const.asyncTest):
* LayoutTests/storage/indexeddb/transaction-state-active-after-creation-worker-expected.txt: Added.
* LayoutTests/storage/indexeddb/transaction-state-active-after-creation-worker.html: Added.
* LayoutTests/storage/indexeddb/transaction-state-active-after-creation.html:

Canonical link: https://commits.webkit.org/292676@main

--- a/LayoutTests/storage/indexeddb/transaction-state-active-after-creation-worker.html
+++ b/LayoutTests/storage/indexeddb/transaction-state-active-after-creation-worker.html
@@ -4,6 +4,8 @@
 <script src="resources/shared.js"></script>
 </head>
 <body>
-<script src="resources/transaction-state-active-after-creation.js"></script>
+<script>
+worker = startWorker('resources/transaction-state-active-after-creation.js');
+</script>
 </body>
 </html>
