qualifiesForContentfulPaint uses wrong coordinate space for frames. https://bugs.webkit.org/show_bug.cgi?id=290365 <rdar://147804424>
Reviewed by Simon Fraser.

This can result in the paint dirty rect not intersecting with the document, if
the <iframe> is positioned.

* LayoutTests/performance-api/paint-timing/paint-timing-frames.html:
* Source/WebCore/rendering/ContentfulPaintChecker.cpp:
(WebCore::ContentfulPaintChecker::qualifiesForContentfulPaint):

Canonical link: https://commits.webkit.org/292679@main

--- a/LayoutTests/performance-api/paint-timing/paint-timing-frames.html
+++ b/LayoutTests/performance-api/paint-timing/paint-timing-frames.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="spacer"></div>
-    <iframe width="100" height="100" id="nonSandboxed" src="./resources/fcp-subframe.html"></iframe>
+    <iframe width="100" height="100" id="nonSandboxed" src="./resources/fcp-subframe.html" style="position:relative; left: 200px;"></iframe>
 <div class="spacer"></div>
 <iframe id="sandboxed" src="./resources/fcp-subframe.html" sandbox="allow-scripts"></iframe>
 <div class="spacer"></div>
