REGRESSION(292391@main): [macOS Debug] inspector/animation/lifecycle-web-animation.html is flaky failure (flaky in EWS) https://bugs.webkit.org/show_bug.cgi?id=290417 <rdar://problem/147875563>
Unreviewed.  Ensure that the animation starts paused so that the state remains consistent if getting the effect takes a little while.

* LayoutTests/inspector/animation/lifecycle-web-animation.html:

Canonical link: https://commits.webkit.org/292689@main

--- a/LayoutTests/inspector/animation/lifecycle-web-animation.html
+++ b/LayoutTests/inspector/animation/lifecycle-web-animation.html
@@ -101,6 +101,7 @@ function test()
     animation-iteration-count: infinite;
     animation-duration: 1s;
     animation-direction: alternate;
+    animation-play-state: paused;
 }
 </style>
 </head>
