AX: It's not necessary to cache AXProperty::TextContentPrefixFromListMarker when ENABLE(AX_THREAD_TEXT_APIS) https://bugs.webkit.org/show_bug.cgi?id=290339 rdar://147780583
Reviewed by Chris Fleizach.

We already handled including list marker text as part of AXTextMarkerRange::toString() — this patch extends that to
AXTextMarkerRange::toAttributedString(), fixing accessibility/mac/line-text-marker-range-in-list-item.html. This test
failed after ENABLE(AX_THREAD_TEXT_APIS) was enabled because we didn't make use of AXProperty::TextContentPrefixFromListMarker.
It's better to determine this information on-demand off the main-thread rather than eagerly computing it, so this property
is now only cached when !ENABLE(AX_THREAD_TEXT_APIS).

AccessibilityObject::textContentPrefixFromListMarker was also more expensive than it needed to be in the common case
where there is no list marker prefix (e.g. non-list-item text). Specifically, it is expensive because it creates a
VisiblePosition. This function now checks whether we have a RenderListItem ancestor first, then only doing the expensive
work if that's true. Based on timings gathered from https://html.spec.whatwg.org when we used to try to cache this for
every object, this new implementation is 4.6x times faster.

This commit also has a drive-by change to downgrade a RELEASE_ASSERT in AccessibilityRenderObject::textRuns() to an
ASSERT, since we can probably still continue safely with incorrect behavior in the given condition happens.

The change to stop caching this property saves 2 seconds from building the accessibility tree on https://html.spec.whatwg.org.

* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::textContentPrefixFromListMarker const):
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::textRuns):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::initializeProperties):
* Source/WebCore/a

--- a/LayoutTests/accessibility/aria-labelledby-on-password-input.html
+++ b/LayoutTests/accessibility/aria-labelledby-on-password-input.html
@@ -30,8 +30,8 @@ if (window.accessibilityController) {
     document.getElementById("password-1").value = "hello";
     setTimeout(async function() {
         await waitFor(() => password1.stringValue === "AXValue: \u2022\u2022\u2022\u2022\u2022");
-        output += expect("button1.description", "'AXDescription: \u2022\u2022\u2022\u2022\u2022'");
-        output += expect("button1.title", "'AXTitle: \u2022\u2022\u2022\u2022\u2022'");
+        output += await expectAsync("button1.description", "'AXDescription: \u2022\u2022\u2022\u2022\u2022'");
+        output += await expectAsync("button1.title", "'AXTitle: \u2022\u2022\u2022\u2022\u2022'");
 
         output += "Update aria-labelledby to text-1 for #button-2\n";
         document.getElementById("button-2").setAttribute("aria-labelledby", "text-1");
