Set model to orbit-fit when setting to StageMode https://bugs.webkit.org/show_bug.cgi?id=290136 rdar://146901729
Reviewed by Ada Chan.

This PR adjusts the way we calculate the bounding box and center of the model based
on whether it is in StageMode orbit or not. When in orbit, we want to inset the model
based on the bounding sphere instead of the bounding box, such that as we rotate the
model it does not get clipped. Since the model's entityTransform is read-write when
we transition back to StageMode none, we do not re-compute when we exit StageMode
orbit. We let web developers recompute the transform as they please.

* Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.h:
* Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.mm:
(WebKit::computeSRT):
- Added a boolean to set either a default rotation (if we just loaded the model or
moved it outside the portal); or reuse the existing rotation of the model
- Also added a separate compute path to use the boundingRadius of the model
(WebKit::ModelProcessModelPlayerProxy::computeTransform):
(WebKit::ModelProcessModelPlayerProxy::didFinishLoading):
(WebKit::ModelProcessModelPlayerProxy::setHasPortal):
(WebKit::ModelProcessModelPlayerProxy::setStageMode):
- Updated callbacks for computeTransform
* Source/WebKit/WebKitSwift/RealityKit/RKEntity.swift:
(WKSRKEntity.boundingRadius):
- Returns bounding radius of the model
(WKSRKEntity.recenterEntity(at:)):
- Recenters the model such that the interaction pivot point is at the center
of the model for orbit fit
* Source/WebKit/WebKitSwift/RealityKit/RealityKitBridging.h:

Canonical link: https://commits.webkit.org/292749@main

--- a/LayoutTests/model-element/model-element-entity-transform.html
+++ b/LayoutTests/model-element/model-element-entity-transform.html
@@ -56,12 +56,26 @@ promise_test(async t => {
     assert_equals(model.stageMode, "");
     assert_3d_matrix_is_identity(originalTransform, false);
 
-    model.stageMode = "orbit";
-    assert_equals(model.stageMode, "orbit");
-
-    let scaledTransform = originalTransform.scale(2, 2, 2);
+    let scaledTransform = originalTransform.scale(2000, 2000, 2000);
     model.entityTransform = scaledTransform;
-    assert_3d_matrix_equals(model.entityTransform, originalTransform);
+
+    assert_3d_matrix_equals(model.entityTransform, scaledTransform);
+    model.stageMode = "orbit";
+
+    await new Promise((resolve) => t.step_timeout(resolve, 100));
+
+    assert_equals(model.stageMode, "orbit");
+    assert_3d_matrix_not_equals(model.entityTransform, scaledTransform);
+    assert_3d_matrix_not_equals(model.entityTransform, originalTransform);
+    let orbitFitTransform = model.entityTransform;
+
+    model.stageMode = "none";
+    await new Promise((resolve) => t.step_timeout(resolve, 100));
+
+    assert_equals(model.stageMode, "none");
+    assert_3d_matrix_not_equals(model.entityTransform, scaledTransform);
+    assert_3d_matrix_not_equals(model.entityTransform, originalTransform);
+    assert_3d_matrix_equals(model.entityTransform, orbitFitTransform);
 }, `<model> ignores entityTransform when stagemode is set`);
 
 </script>
