New test(271791@main): [ macOS wk2 ] http/wpt/opener/parent-access-child-via-windowproxy.html is a flaky failure. https://bugs.webkit.org/show_bug.cgi?id=290398 rdar://147853995
Reviewed by Brady Eidson and Per Arne Vollan.

This test was using a 100 ms timeout to try and wait until an opened window had navigated
cross-origin before accessing a property on the cross-origin WindowProxy object. The timeout seems
to be flaky on the bots.

Change the test to keep trying to access the property until the origin of the opened window changes.

* LayoutTests/http/wpt/opener/parent-access-child-via-windowproxy.html:
* LayoutTests/platform/mac-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/292769@main

--- a/LayoutTests/http/wpt/opener/parent-access-child-via-windowproxy.html
+++ b/LayoutTests/http/wpt/opener/parent-access-child-via-windowproxy.html
@@ -15,8 +15,18 @@ promise_test(async function(t) {
 
   var w = window.open("/common/redirect.py?location=" + encodeURIComponent(url.href));
 
-  await new Promise(resolve => setTimeout(resolve, 100));
-  assert_false(w.closed);
+  // A janky way to ensure that we're accessing a property on a cross-origin
+  // WindowProxy without having the opened page communicate with us.
+  for (let i = 0; i < 10; i++) {
+    await new Promise(resolve => setTimeout(resolve, 500));
+    try {
+      w.location;
+    } catch (e) {
+      if (e instanceof SecurityError) {
+        break;
+      }
+    }
+  }
 
   let domains = await new Promise(resolve => {
     window.testRunner.getAndClearReportedWindowProxyAccessDomains(resolve);
